--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^0.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
@@ -33,7 +34,6 @@
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
     "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -49,7 +49,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "tslib": "^2.4.1",
     "typescript": "~4.8.4"
-  },
-  "optionalDependencies": {}
+  }
 }
