--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,5 @@ testem.log
 Thumbs.db
 
 #enviroment
-/src/environments/*
+**/src/environments/environment.prod.ts
+**/src/environments/environment.ts
