--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,5 @@ testem.log
 Thumbs.db
 
 #enviroment
-**/src/environments/environment.prod.ts
-**/src/environments/environment.ts
+/src/environments/environment.prod.ts
+/src/environments/environment.ts
