--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,5 @@ testem.log
 Thumbs.db
 
 #enviroment
-/src/environments/environment.prod.ts
-/src/environments/environment.ts
-
-#test
+environment.prod.ts
+environment.ts
