--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ Thumbs.db
 #enviroment
 src/environments/environment.prod.ts
 src/environments/environment.ts
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
